# VibeMouse

./: .gitignore  README.md  build.bat  pyproject.toml
scripts/: build_exe.py  qwen3_ov_npu_bounds.py
tests/: test_app.py  test_audio.py  test_config.py  test_model_manager.py  test_output.py  test_streaming_output.py  test_transcriber.py  test_vad_transcriber.py
vibemouse/: __main__.py  app.py  audio.py  config.py  main.py  model_manager.py  mouse_listener.py  output.py  streaming_output.py  transcriber.py  tray.py  vad_transcriber.py
